<resources>
    <string name="app_name">校园随手拍</string>
    <string name="account_enter">Account</string>
    <string name="password_enter">Password</string>
    <string name="login_button">登 录</string>
    <string name="register_request">没有账号？点击注册</string>

    <string name="account_register">用 户 名:</string>
    <string name="password_register">密 码:</string>
    <string name="rpassword_register">重 复 密 码:</string>
    <string name="register_button">注 册</string>

    <string name="news_title">校园新闻</string>
    <string name="homepage_title">个人主页</string>
    <string name="camera_title">随手拍</string>
    
    <string name="process_submitted">已提交</string>
    <string name="process_waiting">等待处理</string>
    <string name="process_processing">处理中</string>
    <string name="process_done">处理完成</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="process_result">处理结果</string>
    <string name="process_speed">处理速度</string>
    <string name="advice">提供一些建议...</string>
    <string name="submit_evaluation">发布评价</string>
    <string name="outLogin">退出登录</string>
    <string name="accountName">用户名</string>
    <string name="nameDefault">默认用户名</string>

</resources>