<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/account_enter"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/account"
        android:layout_marginStart="36dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="36dp"
        android:password="true"
        android:hint="@string/password_enter"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        android:layout_alignTop="@+id/password"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_login"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_request"
        android:textStyle="bold"
        android:textColor="@color/purple_200"/>


</RelativeLayout>
