<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EvaluateActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="88dp"
        android:text="@string/process_result"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/process_speed"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="347dp"
        android:layout_height="166dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:hint="@string/advice"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/submit"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="72dp"
        android:text="@string/submit_evaluation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments" />
</androidx.constraintlayout.widget.ConstraintLayout>