<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:leon="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="176dp"
        android:src="@drawable/icon"
        leon:civ_border_color="#FFFFFF"
        leon:civ_border_width="2dp"
        leon:layout_constraintEnd_toEndOf="parent"
        leon:layout_constraintHorizontal_bias="0.097"
        leon:layout_constraintStart_toStartOf="parent"
        leon:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="40dp"
        android:text="@string/accountName"
        android:textColor="@color/black"
        leon:layout_constraintStart_toStartOf="parent"
        leon:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/nameDefault"
        android:textColor="@color/black"
        leon:layout_constraintStart_toEndOf="@+id/textView6"
        leon:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        leon:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="32dp"
        android:text="@string/outLogin"
        leon:layout_constraintEnd_toEndOf="parent"
        leon:layout_constraintHorizontal_bias="0.0"
        leon:layout_constraintStart_toStartOf="parent"
        leon:layout_constraintTop_toTopOf="@+id/guideline9" />


</androidx.constraintlayout.widget.ConstraintLayout>